[package]
name = "d1flash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
color-eyre = "0.6.2"
config = { version = "0.13.3", features = ["toml"] }
rppal = "0.14.1"
serde = { version = "1.0.181", features = ["derive"] }
